# yggtools

./: .coverage  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  demo.py  main.py  pyproject.toml
.github/workflows/: ci.yml  publish-to-test-pypi.yml  publish.yml  python-publish.yml  test.yml
doc/: ADR-001-rebaseline.md  ADR-002-split-init-commands.md  ADR-003-python-driven-pipeline.md  ADR-004-increase-version-and-version-consistency.md  ADR-005-split-cli-by-domain.md  SDD.md  SRS.md  conception.md  user_guide.md
my-lib/: pyproject.toml
my-lib/.github/workflows/: ci.yml
scripts/: __init__.py  check.sh  generate_report.py  security_deps.sh
src/uvforge/: __init__.py  check.py  cli.py  init.py  models.py  renderer.py  report.py  scaffold.py  suppressions.py
src/uvforge/templates/: Makefile.tmpl  README.md.tmpl  __init__.py  github_ci.yml.tmpl  gitignore.tmpl  gitlab_ci.yml.tmpl  pyproject.toml.tmpl
src/uvforge/templates/scripts/: check.sh  code_metrics.py  generate_report.py
src/yggtools/: __init__.py  check.py  cli.py  cli_support.py  init.py  models.py  renderer.py  report.py  scaffold.py  suppressions.py  uv.py  uv_runner.py  version_commands.py  version_display.py  versioning.py
src/yggtools/quality/: __init__.py  commands.py  display.py  objectives.py  pipeline.py  report.py  runner.py
src/yggtools/quality/checks/: __init__.py  format.py  lint.py  metrics.py  security.py  tests.py  typecheck.py  version.py  warnings.py
src/yggtools/repo_init/: __init__.py  commands.py  display.py  pipeline.py  steps.py
src/yggtools/repo_init/templates/: AGENTS.md.tmpl  CLAUDE.md.tmpl  Makefile.tmpl  __init__.py  github_ci.yml.tmpl  gitlab_ci.yml.tmpl
src/yggtools/templates/: Makefile.tmpl  README.md.tmpl  __init__.py  github_ci.yml.tmpl  gitignore.tmpl  gitlab_ci.yml.tmpl  pyproject.toml.tmpl
src/yggtools/templates/scripts/: __init__.py  check_docstrings.py  code_metrics.py  publish.sh
tests/: __init__.py  conftest.py  test_calculator.py
tests/integration/: __init__.py
tests/scripts/: __init__.py  test_check_docstrings.py  test_code_metrics.py  test_publish_sh.py
tests/unit/: __init__.py  test_check.py  test_checks.py  test_cli.py  test_init.py  test_models.py  test_pipeline.py  test_quality_pipeline.py  test_renderer.py  test_report.py  test_runner.py  test_scaffold.py  test_steps.py  test_suppressions.py  test_uv.py  test_uv_runner.py  test_versioning.py
