[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yggtools"
version = "1.0.0"
description = "uv overlay for opinionated Python package scaffolding."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Antoine Barré" }]
keywords = ["uv", "scaffold", "packaging", "ci", "quality", "automation"]
dependencies = [
    "jinja2>=3.1",
    "rich>=13",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/antoinebarre/yggtools"
Repository = "https://github.com/antoinebarre/yggtools"

[project.scripts]
yggtools = "yggtools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yggtools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=src/yggtools --cov-report=term-missing --cov-fail-under=100"
pythonpath = ["src"]
cache_dir = "work/.pytest_cache"

[tool.coverage.run]
data_file = "work/.coverage"
source = ["src/yggtools"]
omit = [
    "src/yggtools/repo_init/templates/*",
]

[tool.mypy]
strict = true
packages = ["yggtools"]
mypy_path = "src"
cache_dir = "work/.mypy_cache"

[tool.ruff]
cache-dir = "work/.ruff_cache"
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TC001", "TC002", "TC003", "TC004"]

[tool.ruff.lint.per-file-ignores]
# CLI entry points use bool flags with defaults — FBT002 is intentional here.
"src/yggtools/cli.py" = ["FBT002"]
# Test files: assert statements (S101), magic values (PLR2004), unused stub
# arguments (ARG001/ARG002), and subprocess noqa directives are expected.
"tests/**" = ["S101", "PLR2004", "S603", "S607", "ARG001", "ARG002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.flake8]
max-line-length = 79
max-complexity = 10
docstring-convention = "google"
count = true
show-source = true
statistics = true
extend-ignore = ["B042"]

[tool.bandit]
exclude_dirs = ["tests", "work", ".venv"]

[tool.yggtools.code_metrics]
paths = ["src/yggtools", "tests"]
exclude = []
max_cyclomatic_complexity = 10
max_module_logical_lines = 900

[dependency-groups]
dev = [
    "bandit>=1.8",
    "flake8>=7",
    "flake8-bugbear>=24",
    "flake8-docstrings>=1.7",
    "flake8-pyproject>=1.2",
    "mypy>=1.10",
    "pep8-naming>=0.14",
    "pip-audit>=2.8",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.4",
    "twine>=6",
]
