[project]
name = "my-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antoine Barré", email = "antoine.barre@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.8",
    "flake8>=7",
    "flake8-bugbear>=24",
    "flake8-docstrings>=1.7",
    "flake8-pyproject>=1.2",
    "mypy>=1.10",
    "pep8-naming>=0.14",
    "pip-audit>=2.8",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.4",
    "yggtools",
]

[tool.uv.sources]
yggtools = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=src/my_lib --cov-report=term-missing --cov-fail-under=100"
pythonpath = ["src"]
cache_dir = "work/.pytest_cache"

[tool.coverage.run]
data_file = "work/.coverage"
source = ["src/my_lib"]


[tool.mypy]
strict = true
mypy_path = "src"
cache_dir = "work/.mypy_cache"


[tool.ruff]
cache-dir = "work/.ruff_cache"
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TC001", "TC002", "TC003", "TC004"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.flake8]
max-line-length = 79
max-complexity = 10
docstring-convention = "google"
count = true
show-source = true
statistics = true


[tool.bandit]
exclude_dirs = ["tests", "work", ".venv"]


[tool.yggtools.code_metrics]
paths = ["src/my_lib", "tests"]
exclude = []
max_cyclomatic_complexity = 10
max_module_logical_lines = 900
